# ICS3Fuzzer

./: LICENSE  README.md
Instrumentation/: CMakeLists.txt  feedback.c  hash.h  modules.c  monitor_gx.c  readme.md  utils.c  utils.h
Mitsubishi-Dispatcher/: gen_template.py  length_cluster.py  length_fields_analysis.py  mutate_engine.py  read_from_plc.py  receive_mutated_data.py  split_fields.py  state_filter.py  test_script.py  utils.py
Mitsubishi-Dispatcher/json/: mitsubishi_field_115.json  mitsubishi_field_153.json  mitsubishi_field_169.json  mitsubishi_field_171.json  mitsubishi_field_209.json  mitsubishi_field_28.json  mitsubishi_field_365.json  mitsubishi_field_41.json  mitsubishi_field_43.json  mitsubishi_field_45.json  mitsubishi_field_47.json  mitsubishi_field_49.json  mitsubishi_field_493.json  mitsubishi_field_51.json  mitsubishi_field_53.json  mitsubishi_field_55.json  mitsubishi_field_59.json  mitsubishi_field_61.json  mitsubishi_field_669.json  mitsubishi_field_69.json  mitsubishi_field_73.json  mitsubishi_field_75.json  mitsubishi_field_77.json  mitsubishi_field_81.json  mitsubishi_field_83.json  mitsubishi_field_93.json
Mitsubishi-Dispatcher/length/: len_115.txt  len_153.txt  len_169.txt  len_171.txt  len_209.txt  len_28.txt  len_365.txt  len_41.txt  len_43.txt  len_45.txt  len_47.txt  len_49.txt  len_493.txt  len_51.txt  len_53.txt  len_55.txt  len_59.txt  len_61.txt  len_669.txt  len_69.txt  len_73.txt  len_75.txt  len_77.txt  len_81.txt  len_83.txt  len_93.txt
Mitsubishi-Dispatcher/logs/: session.json
Mitsubishi-Dispatcher/pkts/: load_write.txt  (+3 more)
(+29 files in other folders)
